istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springboot
spec:
  host: springboot
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
