istio/virtualservice-bluegreen.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot
spec:
  hosts:
  - "*"
  gateways:
  - springboot-gateway
  http:
  - route:
    - destination:
        host: springboot
        subset: v2
      weight: 100
